updating for deployment and running local

--- a/wercker.yml
+++ b/wercker.yml
@@ -68,3 +68,12 @@ deploy:
        tag: latest
        repository: mmsikora/gogo-service
        registry: https://registry.hub.docker.com
+
+   - cng/cf-deploy:
+       api: $API
+       user: $USER
+       password: $PASSWORD
+       org: $ORG
+       space: $SPACE
+       appname: mmsikora-gogo-service
+       docker_image: mmsikora/gogo-service
