--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,7 @@ applications:
   memory: 512MB
   instances: 1
   name: gogo-service
+  host: mmsikora-gogo-service
   disk_quota: 1024M
   command: gogo-service
   buildpack: https://github.com/cloudfoundry/go-buildpack.git
